maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:11: error: Int(0) does not take parameters
    if (al == 0()){
               ^